--- a/css/style.css
+++ b/css/style.css
@@ -65,18 +65,19 @@ header a{
   justify-content: space-between;
   align-items: center;
 }
-.form-item{
+.form-login{
   width: 80%;
 }
-
 .form-header{
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 .form-header img{
   padding: 20px;
 }
-.form-body h3{
+.form-header h3{
+  text-align: center;
   font-size: 30px;
   color: #fff;
 }
@@ -84,10 +85,6 @@ header a{
   display: flex;
   flex-direction: column;
   align-self: center;
-}
-.item{
-  text-align: center;
-  padding-bottom: 20px;
 }
 .form-footer{
   width: 50%;
@@ -106,13 +103,16 @@ header a{
 .input-group-addon{
   background-color: rgba(255,255,255,1);
 }
+.input-group{
+  padding-bottom: 20px;
+}
 .boton{
   width: 100%;
   height: 30px;
   font-size: 22px;
   border: 0;
   text-align: center;
-  background: rgba(255, 0, 0, 0.0);
+  background: rgba(0, 0, 0, 0);
   border-bottom: solid 1px #fff;
   color: #fff;
 }
@@ -131,6 +131,40 @@ header a{
   border: 0;
   border-radius: 5px;
 }
+.form-registro{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+.formularioregistro{
+  width: 800px;
+  height: 440px;
+  border-radius: 5px;
+  background-color: rgba(0,0,0,0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.columna{
+  padding: 10px;
+}
+.error{
+  display: flex;
+  justify-content: center;
+  font-family: 'PT Sans', sans-serif;
+}
+input::-webkit-input-placeholder {
+color: white !important; /* !important le añade prioridad sobre la clase de flexbox/bootstrap 4*/
+}
+.desplegable{
+  font-family: 'PT Sans', sans-serif;
+}
+
+
+
+
 
 
 
